# telegram-mcp

./: .env  .env.example  .gitignore  Dockerfile  README.md  amvera.yml  claude_desktop_config.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  session_string_generator.py  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build.yml  publish-release.yml  python-lint-format.yml  python-lint.yml  python-tests.yml
tests/: test_basic.py
