[project]
name = "telegram-mcp"
version = "2025.3.201549"
description = "A Telegram MCP (Model Context Protocol) server built using Python, Telethon, and MCP Python SDK. This MCP server provides simple tools for interacting with Telegram chats directly through MCP-compatible hosts, such as Claude for Desktop."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.0",
    "telethon>=1.39.0",
]
