[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-mcp"
version = "1.5.0"
description = "Telegram integration for Claude via the Model Context Protocol"
readme = "README.md"
authors = [
    {name = "l1v0n1", email = "your.email@example.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.0",
    "telethon>=1.39.0",
]

[project.urls]
"Homepage" = "https://github.com/l1v0n1/telegram-mcp-server"
"Bug Tracker" = "https://github.com/l1v0n1/telegram-mcp-server/issues"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "B"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose"
testpaths = ["tests"]
python_files = "test_*.py"
