[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
package-mode = false

[project]
name = "telegram-mcp"
version = "2.0.1"
description = "Telegram integration for Claude via the Model Context Protocol"
readme = "README.md"
authors = [
    {name = "chigwell"},
    {name = "l1v0n1"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.0",
    "telethon>=1.39.0"
]

[project.urls]
"Homepage" = "https://github.com/chigwell/telegram-mcp"
"Bug Tracker" = "https://github.com/chigwell/telegram-mcp/issues"

[tool.black]
line-length = 99
target-version = ['py311']

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 99
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "docs/source/conf.py",
]